@@ -1,4 +1,9 @@
 1999-10-12  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconfd.c: Use GConfListeners to handle listener
+	registration and notification
+
+1999-10-12  Havoc Pennington  <hp@pobox.com>
 	
 	* gconf/gconf-listeners.c (ltable_insert): Was failing to init 
 	the node in the flat array of nodes if the listener location 
